# weact-ch592-blinky

./: .gitignore  CMakeLists.txt  README.md
app/: main.c
toolchain/: riscv-gcc-toolchain.cmake
